[package]
name = "nof"
version = "0.1.0"
edition = "2021"
authors = ["mochi33i"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
libc = "0.2.140"
nix = "0.26.2"
serde_json = "1.0.94"
skim = "0.10.4"

