[package]
name = "nof"
version = "0.4.1"
edition = "2021"
authors = ["mochi33i"]
license-file = "LICENSE"
homepage = "https://github.com/mochi-sann/nof"
repository = "https://github.com/mochi-sann/nof"
documentation ="https://github.com/mochi-sann/nof"
description = "NOF is an open-source tool written in Rust that allows users to search and execute Node.js scripts using fzf"
exclude = [
  "test_files/*",
  ".github/*"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "4.1.5"
libc = "0.2.140"
nix = "0.26.2"
serde_json = "1.0.94"
skim = "0.10.4"

